# sbsearch

./: Cargo.toml  Makefile  README.md
.github/workflows/: main.yaml
img/: tui.img
src/: main.rs  sbfind.rs  sbsearch.rs  tui.rs
src/tui/: event.rs  mod.rs  render.rs
testdata/support_bundle/: metadata.yaml
testdata/support_bundle/logs/harvester-system/cdi-apiserver-bf58b56f7-b9kcx/: cdi-apiserver.log.1
testdata/support_bundle/logs/kube-system/rke2-multus-fhvxv/: kube-rke2-multus.log.1
testdata/support_bundle/yamls/cluster/admissionregistration.k8s.io/v1/: mutatingwebhookconfigurations.yaml  validatingadmissionpolicies.yaml  validatingadmissionpolicybindings.yaml  validatingwebhookconfigurations.yaml
testdata/support_bundle/yamls/cluster/apiregistration.k8s.io/v1/: apiservices.yaml
testdata/support_bundle/yamls/cluster/catalog.cattle.io/v1/: clusterrepos.yaml
testdata/support_bundle/yamls/cluster/cdi.kubevirt.io/v1beta1/: cdiconfigs.yaml  cdis.yaml  storageprofiles.yaml
testdata/support_bundle/yamls/cluster/crd.projectcalico.org/v1/: clusterinformations.yaml  felixconfigurations.yaml  ippools.yaml
testdata/support_bundle/yamls/cluster/fleet.cattle.io/v1alpha1/: contents.yaml
testdata/support_bundle/yamls/cluster/flowcontrol.apiserver.k8s.io/v1/: flowschemas.yaml  prioritylevelconfigurations.yaml
testdata/support_bundle/yamls/cluster/harvesterhci.io/v1beta1/: settings.yaml
testdata/support_bundle/yamls/cluster/v1/: componentstatuses.yaml  namespaces.yaml  nodes.yaml  persistentvolumes.yaml
(+248 files in other folders)
