[package]
name = "sbfind"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.12.2"
textwrap = "0.16.2"
tui-input = { version = "*", features = [
  "crossterm",
], default-features = false }
