[package]
name = "sbsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ratatui = "0.29.0"
tempfile = "3.24.0"
textwrap = "0.16.2"
tui-input = { version = "*", features = [
  "crossterm",
], default-features = false }
